# iseelocal

./: .env.example  .gitignore  AGENTS.md  README.md  go.mod  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: App.tsx  (+1 more)
cmd/deveverywhere-agent/: main.go
cmd/deveverywhere-relay/: main.go
cmd/iseelocal-agent/: main.go
cmd/iseelocal-relay/: main.go
docs/: architecture.md  docker-vps.md  mvp-runbook.md  roadmap.md  security.md
infra/caddy/: Caddyfile.example
infra/docker/: Caddyfile  compose.yaml  relay.Dockerfile  relay.env.example  sshd-entrypoint.sh  sshd.Dockerfile  sshd_config
infra/docker/ssh/: authorized_keys.example
infra/scripts/: create-tunnel-user.sh  install-relay.sh  sync-herd-routes.py
infra/ssh/: sshd_config.snippet
infra/systemd/: iseelocal-relay.service
internal/agent/config/: config.go  config_test.go
internal/agent/healthcheck/: healthcheck.go  healthcheck_test.go
internal/agent/ssh/: command.go  command_test.go
internal/agent/supervisor/: supervisor.go  supervisor_test.go
internal/relay/api/: server.go  server_test.go
internal/relay/auth/: middleware.go  middleware_test.go
internal/relay/ingress/: dashboard.go  proxy.go  proxy_test.go
internal/relay/ports/: allocator.go  allocator_test.go
internal/relay/store/: sqlite.go  sqlite_test.go  store.go
internal/shared/contracts/: types.go
internal/shared/validation/: validation.go  validation_test.go
(+4 files in other folders)
