[package]
name = "iseelocal"
version = "0.1.0"
description = "Desktop tunnel controller for iseelocal"
authors = ["iseelocal"]
edition = "2021"

[lib]
name = "iseelocal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
